--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Code in this directory performs tasks described in the publication:
+Code in this directory performs geodesic binning tasks described in the publication:
 
 Sefton-Nash, E., Williams, J-P., Greenhagen, B. T., Aye, K.-M. and Paige, D. A. 
 'Diviner Lunar Radiometer gridded brightness temperatures from geodesic binning of 
